--- a/default.project.json
+++ b/default.project.json
@@ -4,7 +4,7 @@
     "$className": "DataModel",
 
     "ReplicatedStorage": {
-      "Common": {
+      "GiftItems": {
         "$path": "src/shared"
       }
     },
