Add path to EmotesGui

--- a/default.project.json
+++ b/default.project.json
@@ -18,6 +18,9 @@
     "StarterGui": {
       "menuScreen": {
         "$path": "src/gui"
+      }, 
+      "emoteScreen": {
+        "$path": "src/emotes"
       }
     },
 
